<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WelcomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textColor="@color/material_dynamic_tertiary10"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/eingabeWert1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/eingabeFrequenz"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:textColorLink="#0B5741" />

        <EditText
            android:id="@+id/eingabeWert2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/eingabeGeschwindigkeit"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:textColorLink="#0B5741" />

        <Button
            android:id="@+id/bestaetigung"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/berechnen"
            android:onClick="clickHandlerFunction" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:src="@mipmap/ic_banner_foreground" />

    </LinearLayout>

</layout>