<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ResultFragment">

    <data>
        <variable
            name="dopplerEntity"
            type="de.sinah.dopplereffelt.database.Doppler" />

        <variable
            name="viewModel"
            type="de.sinah.dopplereffelt.model.MainActivityViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_banner_foreground" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speed"
                    android:textColor="#070707"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/speedField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blankString"
                    android:textColor="#070707"
                    android:textSize="30dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m_s"
                    android:textColor="#070707"
                    android:textSize="30dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/frequency"
                    android:textColor="#070707"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/frequencyField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blankString"
                    android:textColor="#070707"
                    android:textSize="30dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hz"
                    android:textColor="#070707"
                    android:textSize="30dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/result"
                    android:textColor="#070707"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/resultField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#070707"
                    android:textSize="30dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hz"
                    android:textColor="#070707"
                    android:textSize="30dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/newDoppler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/neue_berechnung" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>